res/examples/invalid/bare_semicolon.eg
;

// out: SyntaxError: unexpected ";"; expected: ["\"{\"", "\"[\"", "\"(\"", "\"..\"", "\"-\"", "\"!\"", "\"true\"", "\"false\"", "\"if\"", "\"fn\"", "\"let\"", "\"const\"", "\"type\"", "\"assert_type\"", "\"return\"", "identifier", "string", "number"]